Updated login page with username and pwd

--- a/login.html
+++ b/login.html
@@ -2,5 +2,7 @@
     <head></head>
     <body>
         <h1>This is login screen</h1>
+        Username:<br>
+        Password:
     </body>
 </html>
