footer section added in home page

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
         <img src="assets/logo.png" height="50px"/>
         <h1>Blood bank system</h1>
         <p>Details goes in here</p>
+        <footer>
+            This is footer
+        </footer>
     </body>
 </html>
