--- a/forgot-password.html
+++ b/forgot-password.html
@@ -2,5 +2,8 @@
     <head></head>
     <body>
         <h1>This is forgot password page</h1>
+        <footer>
+            Forgot pwd Footer
+        </footer>
     </body>
 </html>
