upcode link added in home page footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <p>Details goes in here</p>
         <footer>
             This is footer
+            <a href="www.upcode.in">Upcode</a>
         </footer>
     </body>
 </html>
