added About and contact

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <p>Details goes in here</p>
         <footer>
             This is footer
+            <a>About us</a>
+            <a>Contact us</a>
         </footer>
     </body>
 </html>
