--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <p>Details goes in here</p>
         <footer>
             This is footer
-            <a>About us</a>
-            <a>Contact us</a>
+            <a href="">About us</a>
+            <a href="">Contact us</a>
         </footer>
     </body>
 </html>
