reverting to 97fbd24

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <p>Details goes in here</p>
         <footer>
             This is footer
-            <a href="">About us</a>
-            <a href="">Contact us</a>
+            <a>About us</a>
+            <a>Contact us</a>
             <div class="social">
                 <a>Youtube</a>
                 <a>Instagram</a>
